[package]
name = "MazeApi"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "1.51.0", features = ["rt-multi-thread", "macros"] }
MazeGenerator = "0.1.3"
axum = "0.8.8"
serde = { version = "1.0.228", features = ["derive"] }
image = "0.25.10"

[lints.rust]
nonstandard_style = "allow"
